--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -133,6 +133,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvPasswordValueProfile"
                 tools:ignore="TextContrastCheck,TextContrastCheck" />
 
+            <ImageButton
+                android:id="@+id/ibAppInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:contentDescription="@string/app_info"
+                android:src="@drawable/ic_app_info"
+                app:layout_constraintStart_toEndOf="@+id/ivAppIconProfile"
+                app:layout_constraintTop_toTopOf="@+id/ivAppIconProfile"
+                tools:ignore="SpeakableTextPresentCheck" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
